# liteframe

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yaml
liteframe/: cli.py
