[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liteframe"
description = "SQLite + Pandas framework for data analysis"
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["version", "dependencies"]
authors = [
    { name = "Victor Martins", email = "victor.martins.dpaula@gmail.com" },
]
maintainers = [
    { name = "Victor Martins", email = "victor.martins.dpaula@gmail.com" },
]
keywords = ["python", "package"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Repository = "https://github.com/victormpa/liteframe"
# Homepage = "https://github.com/yourusername/my-awesome-package"
# Documentation = "https://my-awesome-package.readthedocs.io/"
# Issues = "https://github.com/yourusername/my-awesome-package/issues"


[project.scripts]
lf = "liteframe.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.4.2", "flake8", "black"]

[tool.setuptools]
packages = ["liteframe"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
version = { attr = "liteframe.__version__" }

[tool.black]
line-length = 88
target-version = ['py313']
